--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Method Tester</title>
+
+<style>
+    p {font-size: 16px}
+    a {font-size: 20px}
+    h1 {font-size: 24px}
+</style>
+
+</head>
+
+<body>
+    <h1>Method Tester</h1>
+    <p><a href='surprise-41.html'>Standard 41</a></p>
+    <p><a href='surprise-c.html'>Cambridge Above</a></p>
+    <p><a href='surprise-k.html'>Carlisle Above</a></p>
+    <p><a href='surprise-l.html'>London Above</a></p>
+    <p><a href='surprise-n.html'>Norwich Above</a></p>
+
+    <p> A simple tool for learning the names of Minor methods, 
+        intended particularly for touch screens.  </p>
+        <p>
+        Select the over-work (shown in UPPER CASE), under-work (lower case), 
+        and lead-end for the method shown.  
+        Correct responses are highlighted in green, incorrect ones in red.  Answers are timed.
+        Methods are random,
+        favouring those that have had slower or incorrect responses previously.  The percentage score 
+        reflects speed and accuracy.  It never 
+        reaches 100%, but keeping it above 95% for an extended period is a reasonable challenge.  
+        The pause button temporarily suspends timing.  Reloading the page erases the score and 
+        starts again.</p>
+
+
+    <p>Alexander E Holroyd, 2020</p>
+</body>
+</html>
