--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
     <h3>Treble Bob</h3>
     
     <p><a href='treble-bob-29.html'>Standard 29</a></p>
-
+    <p><a href='treble-bob-kent.html'>Kent Above</a></p>
+    <p><a href='treble-bob-oxford.html'>Oxford Above</a></p>
+    <p><a href='treble-bob-hills.html'>Hills Above</a></p>    
+    <p><a href='treble-bob-dover.html'>Dover Above</a></p>
 
     <p> A simple tool for learning the names of Minor methods, 
         intended particularly for touch screens.  </p>
