--- a/treble-bob-hills.html
+++ b/treble-bob-hills.html
@@ -27,7 +27,7 @@ var includeAll=false;
 var methodTable=
 [
 'Pennine/H/Ki/2','Norton-le-M/H/Sn/2','Cheviot/H/Cv/2',
-'Chiltern/H/Ci','Mendip/H/Mp/2','Cotswold/H/Cw/2',
+'Chiltern/H/Ci/2','Mendip/H/Mp/2','Cotswold/H/Cw/2',
 ];
 
 // Parameters
