--- a/treble-bob-29.html
+++ b/treble-bob-29.html
@@ -38,7 +38,7 @@ var methodTable=
 'Norbury/O/D4/2','Kingston/O/D4/6','Rochester/O/Cw/2','Burton/O/Cw/6',
 
 'Pennine/H/Ki/2','Norton-le-M/H/Sn/2','Cheviot/H/Cv/2',
-'Chiltern/H/Ci','Mendip/H/Mp/2','Cotswold/H/Cw/2',
+'Chiltern/H/Ci/2','Mendip/H/Mp/2','Cotswold/H/Cw/2',
 
 'Chadkirk/D/Ck/2','Nelson/D/Ck/6','British Sc Pl/D/Mp/2',"Woodcock's Vic/D/Mp/6"
 ];
