--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     
     <h3>Treble Bob</h3>
     
-    <p><a href='treble-bob-29.html'>Standard 29</a></p>
+    <p><a href='treble-bob-29.html'>Standard 29 (named underworks)</a></p>
+    <p><a href='treble-bob-29-b.html'>Standard 29 (symbolic underworks)</a></p>
     <p><a href='treble-bob-kent.html'>Kent Above</a></p>
     <p><a href='treble-bob-oxford.html'>Oxford Above</a></p>
     <p><a href='treble-bob-hills.html'>Hills Above</a></p>    
