--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
     <h3>4th's Place Delight</h3>
     
-    <p><a href='4ths-delight.html'>Standard 35</a></p>
+    <p><a href='4ths-delight-n.html'>Standard 35 (named underworks)</a></p>
+    <p><a href='4ths-delight.html'>Standard 35 (symbolic underworks)</a></p>
     <p><a href='4ths-delight-cambridge.html'>Cambridge Above</a></p>
     <p><a href='4ths-delight-carlisle.html'>Carlisle Above</a></p>
     <p><a href='4ths-delight-london.html'>London Above</a></p>
