--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     <p><a href='4ths-delight-london.html'>London Above</a></p>
     <p><a href='4ths-delight-norwich.html'>Norwich Above</a></p>
     
-    <p>Alexander E Holroyd, 2020</p>
+    <p>Alexander E Holroyd, 2020-2021</p>
 </body>
 </html>
