--- a/4ths-delight-n.html
+++ b/4ths-delight-n.html
@@ -33,17 +33,17 @@ var methodTable=
 'Burslem/C/Bw/2','Waltham/C/Bw/6','Burnaby/C/By/2',
 
 'Fountains/A/Ck/2','Melrose/A/Ck/6','Tewkesbury/A/Ms/2','Evesham/A/Ms/6',
-'Gastonbury/A/Bw/2','Tintern/A/By/2','Sherbourne/A/By/6',
+'Glastonbury/A/Bw/2','Tintern/A/By/2','Sherborne/A/By/6',
 
 'Combermere/L/D1/2','Vale Royal/L/D2/2','Crowland/L/D3/2','St Werburgh/L/D4/2',
 'Abbeyville/L/Cv/2','Canterbury D/L/Cn/2','Southwark/L/By/2',
 
 'Old Oxford/N/D1/2','Neasden/N/D1/6','College Bob IV/N/D2/2','St Albans/N/D2/6',
-'Newdigate/N/D3/2','Charlwood/N/D3/6','Willesden/N/D4/2','Wragbury/N/D4/6',
+'Newdigate/N/D3/2','Charlwood/N/D3/6','Willesden/N/D4/2','Wragby/N/D4/6',
 'Marple/N/Cv/2','Braintree/N/Cv/6','Taxal/N/Cn/2','Humber/N/Cn/6',
 'Bedford/N/By/2','Merton/N/By/6'
 
-];
+    ];
 
 // Parameters
 
