--- a/3rds-delight.html
+++ b/3rds-delight.html
@@ -2,10 +2,6 @@
 <html>
 <head>
 <title>Standard 42 3rds Place Delight Methods</title>
-<!-- <title>Kent-Above Treble Bob Methods</title> -->
-<!-- <title>Carlisle-Above Surprise Methods</title> -->
-<!-- <title>London-Above Surprise Methods</title> -->
-<!-- <title>Norwich-Above Surprise Methods</title> -->
 
 <script>
 // ------------------------------------------------------------
@@ -15,10 +11,10 @@
 
 var workTable=
 [['O/OXFORD','K/KENT','H/HILLS','D/DOVER'],
-['S1/S1','S2/S2','S3/S3','S4/S4','El/S1 1st','Cx/S4 1st','Bn/Kelso 3rd',
-'Cm/Cambridge','Ip/Ipswich','Cu/Cunecastre','Bv/Beverley','Su/Surfleet',
-'No/Norwich','Bo/Bourne','Lo/London','Cc/London 5th','We/Wells',
+['Cm/Cambridge','Ip/Ipswich','Cu/Cunecastre','Bv/Beverley','Su/Surfleet',
+'No/Norwich','Bo/Bourne','Lo/London','We/Wells',
 'Ws/Westminster','Ad/Allendale','Ke/Kelso','Wk/Warkworth'],
+['S1/S1','S2/S2','S3/S3','S4/S4','El/S1 1st','Cx/S4 1st','Bn/Kelso 3rd','Cc/London 5th'],
 ['2/2nds','6/6ths']
 ];
 
