--- a/3rds-delight.html
+++ b/3rds-delight.html
@@ -10,11 +10,11 @@
 // List of works, arranged by column, each given as Id/Name 
 
 var workTable=
-[['O/OXFORD','K/KENT','H/HILLS','D/DOVER'],
+[['O/OXFORD','D/DOVER','K/KENT','H/HILLS'],
 ['Cm/Cambridge','Ip/Ipswich','Cu/Cunecastre','Bv/Beverley','Su/Surfleet',
 'No/Norwich','Bo/Bourne','Lo/London','We/Wells',
 'Ws/Westminster','Ad/Allendale','Ke/Kelso','Wk/Warkworth'],
-['S1/S1','S2/S2','S3/S3','S4/S4','El/S1 1st','Cx/S4 1st','Bn/Kelso 3rd','Cc/London 5th'],
+['S1/S1','S2/S2','S3/S3','S4/S4','Ey/S1 1st','Cx/S4 1st','Bn/Kelso 3rd','Cc/London 5th'],
 ['2/2nds','6/6ths']
 ];
 
@@ -26,19 +26,21 @@ var includeAll=false;
 
 var methodTable=
 [
-'Elston/C/Ck/2','Clarence/C/Ck/6','Kirkstall/C/Ms/2','London Vic/C/Ms/6',
-'Burslem/C/Bw/2','Waltham/C/Bw/6','Burnaby/C/By/2',
+'Peveril/H/S1/2','Leasowe/H/S2/2','Melandra/H/S3/2','Beeston/H/S4/2',
+'Bucknall/H/Bn/2','Castleton/H/Cx/2','Stirling/H/Cu/2','Chelsea/H/Cc/2',
 
-'Fountains/A/Ck/2','Melrose/A/Ck/6','Tewkesbury/A/Ms/2','Evesham/A/Ms/6',
-'Gastonbury/A/Bw/2','Tintern/A/By/2','Sherbourne/A/By/6',
+'Warwick/K/Cx/2','Ludlow/K/Cx/6','Caernarvon/K/Bn/2','Conway/K/Bn/6',
+'Barham/K/Cm/2','Oswald/K/Cm/6','Pembroke/K/Bv/2','Edinburgh/K/Bv/6',
+'Berkeley/K/Su/2','Kentish/K/Su/6','Pontefract/K/Ws/2','Wath/K/Ws/6',
+'Donottar/K/Ad/2','Carisbrooke/K/Ad/6',
 
-'Combermere/L/D1/2','Vale Royal/L/D2/2','Crowland/L/D3/2','St Werburgh/L/D4/2',
-'Abbeyville/L/Cv/2','Canterbury D/L/Cn/2','Southwark/L/By/2',
+'Wilmslow/D/S1/2','Balmoral/D/S1/6','Bogedone/D/S2/2','Fotheringay/D/S2/6',
+'Rostherne/D/S3/2','Chepstow/D/S3/6','Knutsford/D/S4/2','Skipton/D/S4/6',
+'Ely/D/Ey/2','Belvoir/D/Wk/6','Francis Genius/D/Ip/2','Cambridge D/D/Ip/6',
+'Dover/D/No/6','Dunedin/D/Cc/2','Pevensey/D/Cc/6',
 
-'Old Oxford/N/D1/2','Neasden/N/D1/6','College Bob IV/N/D2/2','St Albans/N/D2/6',
-'Newdigate/N/D3/2','Charlwood/N/D3/6','Willesden/N/D4/2','Wragbury/N/D4/6',
-'Marple/N/Cv/2','Braintree/N/Cv/6','Taxal/N/Cn/2','Humber/N/Cn/6',
-'Bedford/N/By/2','Merton/N/By/6'
+'Disley/O/Bo/2','Conisborough/O/Ke/2','Richborough/O/Ke/6','
+'Evening Star/O/Ey/2','Coventry/O/Ey/6'
 
 ];
 
