--- a/3rds-delight.html
+++ b/3rds-delight.html
@@ -39,7 +39,7 @@ var methodTable=
 'Ely/D/Ey/2','Belvoir/D/Wk/6','Francis Genius/D/Ip/2','Cambridge D/D/Ip/6',
 'Dover/D/No/6','Dunedin/D/Cc/2','Pevensey/D/Cc/6',
 
-'Disley/O/Bo/2','Conisborough/O/Ke/2','Richborough/O/Ke/6','
+'Disley/O/Bo/2','Conisborough/O/Ke/2','Richborough/O/Ke/6',
 'Evening Star/O/Ey/2','Coventry/O/Ey/6'
 
 ];
