--- a/3rds-delight.html
+++ b/3rds-delight.html
@@ -12,7 +12,7 @@
 var workTable=
 [['O/OXFORD','D/DOVER','K/KENT','H/HILLS'],
 ['Cm/Cambridge','Ip/Ipswich','Cu/Cunecastre','Bv/Beverley','Su/Surfleet',
-'No/Norwich','Bo/Bourne','Lo/London','We/Wells',
+'No/Norwich','Bo/Bourne',
 'Ws/Westminster','Ad/Allendale','Ke/Kelso','Wk/Warkworth'],
 ['S1/S1','S2/S2','S3/S3','S4/S4','Ey/S1 1st','Cx/S4 1st','Bn/Kelso 3rd','Cc/London 5th'],
 ['2/2nds','6/6ths']
