--- a/index.html
+++ b/index.html
@@ -52,7 +52,15 @@
     <p><a href='4ths-delight-carlisle.html'>Carlisle Above</a></p>
     <p><a href='4ths-delight-london.html'>London Above</a></p>
     <p><a href='4ths-delight-norwich.html'>Norwich Above</a></p>
+
+    <h3>3rd's Place Delight</h3>
     
-    <p>Alexander E Holroyd, 2020-2021</p>
+    <p><a href='3rds-delight.html'>Standard 42</a></p>
+    <p><a href='3rds-delight-hills.html'>Hills Above</a></p>
+    <p><a href='3rds-delight-kent.html'>Kent Above</a></p>
+    <p><a href='3rds-delight-dover.html'>Dover Above</a></p>
+    <p><a href='3rds-delight-oxford.html'>Oxford Above</a></p>
+
+    <p>Alexander E Holroyd, 2020-2022</p>
 </body>
 </html>
