--- a/3rds-delight-holroyd-atw.html
+++ b/3rds-delight-holroyd-atw.html
@@ -49,7 +49,7 @@ var methodTable=
 ];
 
     var composition =
-'Castleton,Chelsea,Caernarvon,Barham,Barham,Stirling,Peveril,Warwick,Oswald,Edinburgh,Ludlow,Conway,Leasowe,Kentish,Leasowe,Disley,Conisborough,Evening Star,Wilmslow,Bogedone,Belvoir,Richborough,Rostherne,Knutsford,Coventry,Dover,Balmoral,Balmoral,Wath,Permbroke,Berkeley,Carisbrooke,Pontefract,Melandra,Bucknall,Beeston,Conottar,Caernarvon,Pevensey,Belvoir,Fotheringay,Cambridge D,Francis Genius,Dunedin,Ely,Chepstow,Skipton,Skipton'.split(',');
+'Castleton,Chelsea,Caernarvon,Barham,Barham,Stirling,Peveril,Warwick,Oswald,Edinburgh,Ludlow,Conway,Leasowe,Kentish,Leasowe,Disley,Conisborough,Evening Star,Wilmslow,Bogedone,Belvoir,Richborough,Rostherne,Knutsford,Coventry,Dover,Balmoral,Balmoral,Wath,Pembroke,Berkeley,Carisbrooke,Pontefract,Melandra,Bucknall,Beeston,Donottar,Caernarvon,Pevensey,Belvoir,Fotheringay,Cambridge D,Francis Genius,Dunedin,Ely,Chepstow,Skipton,Skipton'.split(',');
 
 // Parameters
 
