--- a/standard-147.html
+++ b/standard-147.html
@@ -14,10 +14,10 @@ var workTable=
 
 ['Bw/Berwn','Mp/Mendp','D1/D1','D2/D2','D3/D3','D4/D4',
 'S1/S1','S2/S2','S3/S3','S4/S4','Ke/Kelso','Cc/Chels','Bv/Bevly','Su/Surfl','Cm/Cambr'],
-['C2/Chiltn','Bu/Burnb','Cj/Chadk','Km/Killm','Sn/Snwdn','_/&nbsp;' ,
-'Ws/Westm','Bo/Bourn','Ad/Allend','_/&nbsp;','Bn/Buckn','Lo/Lond','_/&nbsp;','Wk/Warkw','Cu/Cunec'],
-['_/&nbsp;','C1/Cotsw','Kt/Kent','Ms/Morn S','_/&nbsp;','Av/Abbvl',
-'Ey/Ely','No/Nwch','_/&nbsp;','Cx/Castln','_/&nbsp;','_/&nbsp;','We/Wells','_/&nbsp;','Ip/Ipsw'],
+['C2/Chilt','Bu/Burnb','Cj/Chadk','Km/Killm','Sn/Snwdn','_/&nbsp;' ,
+'Ws/Westm','Bo/Bourn','Ad/Allen','_/&nbsp;','Bn/Buckn','Lo/Lond','_/&nbsp;','Wk/Warkw','Cu/Cunec'],
+['_/&nbsp;','C1/Cotsw','Kt/Kent','Ms/Mrn St','_/&nbsp;','Av/Abbvl',
+'Ey/Ely','No/Nwch','_/&nbsp;','Cx/Castn','_/&nbsp;','_/&nbsp;','We/Wells','_/&nbsp;','Ip/Ipsw'],
 
 ['2/&nbsp;2&nbsp;','6/6']
 ];
@@ -30,6 +30,22 @@ var includeAll=false;
 
 var methodTable=
 [
+'Cambridge/C/Cm/2','Primrose/C/Cm/6','Ipswich/C/Ip/2','Norfolk/C/Ip/6',
+'Beverley/C/Bv/2','Berwick/C/Bv/6','Surfleet/C/Su/2','Hexham/C/Su/6',
+'Bourne/C/Bo/2','Hull/C/Bo/6','York/C/Lo/2','Durham/C/We/2',
+
+'Carlisle/K/Cm/2','Northumberland/K/Ip/2','Whitley/K/Ip/6',
+'Chester/K/Bv/2','Munden/K/Su/2','Sandiacre/K/Bo/2','Wooler/K/Bo/6',
+'Alnwick/K/Lo/2','Canterbury/K/Lo/6','Newcastle/K/We/2','Morpeth/K/We/6',
+
+'London/L/Lo/2','Wells/L/We/2','Lincoln/L/Ws/2','Coldstream/L/Ad/2',
+'Cunecastre/L/Cu/2','Kelso/L/Ke/2',
+
+'Norwich/N/No/6','Warkworth/N/Wk/6','Westminster/N/Ws/2','Allendale/N/Ad/2',
+'Netherseale/N/Cu/2',"Annable's London/N/Cu/6",'Bamborough/N/Ke/2','Bacup/N/Ke/6',
+'Lightfoot/N/Lo/2','Rossendale/N/Lo/6','Wearmouth/N/We/2','Stamford/N/We/6',
+
+
 'Peveril/H/S1/2','Leasowe/H/S2/2','Melandra/H/S3/2','Beeston/H/S4/2',
 'Bucknall/H/Bn/2','Castleton/H/Cx/2','Stirling/H/Cu/2','Chelsea/H/Cc/2',
 
@@ -44,8 +60,35 @@ var methodTable=
 'Dover/D/No/6','Dunedin/D/Cc/2','Pevensey/D/Cc/6',
 
 'Disley/O/Bo/2','Conisborough/O/Ke/2','Richborough/O/Ke/6',
-'Evening Star/O/Ey/2','Coventry/O/Ey/6'
+'Evening Star/O/Ey/2','Coventry/O/Ey/6',
 
+
+'Elston/C/Cj/2','Clarence/C/Cj/6','Kirkstall/C/Ms/2','London Vic/C/Ms/6',
+'Burslem/C/Bw/2','Waltham/C/Bw/6','Burnaby/C/By/2',
+
+'Fountains/A/Cj/2','Melrose/A/Cj/6','Tewkesbury/A/Ms/2','Evesham/A/Ms/6',
+'Gastonbury/A/Bw/2','Tintern/A/Bu/2','Sherbourne/A/Bu/6',
+
+'Combermere/L/D1/2','Vale Royal/L/D2/2','Crowland/L/D3/2','St Werburgh/L/D4/2',
+'Abbeyville/L/Av/2','Canterbury D/L/C2/2','Southwark/L/Bu/2',
+
+'Old Oxford/N/D1/2','Neasden/N/D1/6','College Bob IV/N/D2/2','St Albans/N/D2/6',
+'Newdigate/N/D3/2','Charlwood/N/D3/6','Willesden/N/D4/2','Wragbury/N/D4/6',
+'Marple/N/Av/2','Braintree/N/Av/6','Taxal/N/C2/2','Humber/N/C2/6',
+'Bedford/N/Bu/2','Merton/N/Bu/6',
+
+
+'Kent/K/Kt/6','Trinity Sunday/K/Km/2','Killamarsh/K/Km/6',
+'Quantock/K/Sn/2','Snowdon/K/Sn/6','Berwyn/K/Bw/2','Waterford/K/Bw/6',
+
+'Oxford/O/Kt/6','Duke of Norfolk/O/D1/2','Sandal/O/D1/6','Morning Star/O/Ms/2',
+'College Ex/O/D2/2',"London Sc Pl/O/D2/6",'Ockley/O/D3/2','Capel/O/D3/6',
+'Norbury/O/D4/2','Kingston/O/D4/6','Rochester/O/C1/2','Burton/O/C1/6',
+
+'Pennine/H/Km/2','Norton-le-M/H/Sn/2','Cheviot/H/Av/2',
+'Chiltern/H/C2','Mendip/H/Mp/2','Cotswold/H/C1/2',
+
+'Chadkirk/D/Cj/2','Nelson/D/Cj/6','British Sc Pl/D/Mp/2',"Woodcock's Vic/D/Mp/6"
 ];
 
 // Parameters
