--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
     <p><a href='3rds-delight-dover.html'>Dover Above</a></p>
     <p><a href='3rds-delight-oxford.html'>Oxford Above</a></p>
 
+    <h3>Treble Dodging</h3>
+    
+    <p><a href='standard-147.html'>Standard 147</a></p>
+    
     <p>Alexander E Holroyd, 2020-2022</p>
 </body>
 </html>
