--- a/standard-147.html
+++ b/standard-147.html
@@ -10,7 +10,7 @@
 // List of works, arranged by column, each given as Id/Name 
 
 var workTable=
-[['H/HI','K/KT','O/OX','D/DO','C/CM','N/NO','L/LO','A/CL'],
+[['H/&nbsp;HI&nbsp;','K/KT','O/OX','D/DO','C/CM','N/NO','L/LO','A/CL'],
 
 ['Bw/Berwn','Mp/Mendp','D1/D1','D2/D2','D3/D3','D4/D4',
 'S1/S1','S2/S2','S3/S3','S4/S4','Ke/Kelso','Cc/Chels','Bv/Bevly','Su/Surfl','Cm/Cambr'],
@@ -30,13 +30,13 @@ var includeAll=false;
 
 var methodTable=
 [
-'Cambridge/C/Cm/2','Primrose/C/Cm/6','Ipswich/C/Ip/2','Norfolk/C/Ip/6',
+'Cambridge S/C/Cm/2','Primrose/C/Cm/6','Ipswich/C/Ip/2','Norfolk/C/Ip/6',
 'Beverley/C/Bv/2','Berwick/C/Bv/6','Surfleet/C/Su/2','Hexham/C/Su/6',
 'Bourne/C/Bo/2','Hull/C/Bo/6','York/C/Lo/2','Durham/C/We/2',
 
-'Carlisle/K/Cm/2','Northumberland/K/Ip/2','Whitley/K/Ip/6',
-'Chester/K/Bv/2','Munden/K/Su/2','Sandiacre/K/Bo/2','Wooler/K/Bo/6',
-'Alnwick/K/Lo/2','Canterbury/K/Lo/6','Newcastle/K/We/2','Morpeth/K/We/6',
+'Carlisle/A/Cm/2','Northumberland/A/Ip/2','Whitley/A/Ip/6',
+'Chester/A/Bv/2','Munden/A/Su/2','Sandiacre/A/Bo/2','Wooler/A/Bo/6',
+'Alnwick/A/Lo/2','Canterbury S/A/Lo/6','Newcastle/A/We/2','Morpeth/A/We/6',
 
 'London/L/Lo/2','Wells/L/We/2','Lincoln/L/Ws/2','Coldstream/L/Ad/2',
 'Cunecastre/L/Cu/2','Kelso/L/Ke/2',
