--- a/standard-147.html
+++ b/standard-147.html
@@ -64,7 +64,7 @@ var methodTable=
 
 
 'Elston/C/Cj/2','Clarence/C/Cj/6','Kirkstall/C/Ms/2','London Vic/C/Ms/6',
-'Burslem/C/Bw/2','Waltham/C/Bw/6','Burnaby/C/By/2',
+'Burslem/C/Bw/2','Waltham/C/Bw/6','Burnaby/C/Bu/2',
 
 'Fountains/A/Cj/2','Melrose/A/Cj/6','Tewkesbury/A/Ms/2','Evesham/A/Ms/6',
 'Gastonbury/A/Bw/2','Tintern/A/Bu/2','Sherbourne/A/Bu/6',
