--- a/standard-147.html
+++ b/standard-147.html
@@ -86,7 +86,7 @@ var methodTable=
 'Norbury/O/D4/2','Kingston/O/D4/6','Rochester/O/C1/2','Burton/O/C1/6',
 
 'Pennine/H/Km/2','Norton-le-M/H/Sn/2','Cheviot/H/Av/2',
-'Chiltern/H/C2','Mendip/H/Mp/2','Cotswold/H/C1/2',
+'Chiltern/H/C2/2','Mendip/H/Mp/2','Cotswold/H/C1/2',
 
 'Chadkirk/D/Cj/2','Nelson/D/Cj/6','British Sc Pl/D/Mp/2',"Woodcock's Vic/D/Mp/6"
 ];
