--- a/standard-147.html
+++ b/standard-147.html
@@ -73,7 +73,7 @@ var methodTable=
 'Abbeyville/L/Av/2','Canterbury D/L/C2/2','Southwark/L/Bu/2',
 
 'Old Oxford/N/D1/2','Neasden/N/D1/6','College Bob IV/N/D2/2','St Albans/N/D2/6',
-'Newdigate/N/D3/2','Charlwood/N/D3/6','Willesden/N/D4/2','Wragbury/N/D4/6',
+'Newdigate/N/D3/2','Charlwood/N/D3/6','Willesden/N/D4/2','Wragby/N/D4/6',
 'Marple/N/Av/2','Braintree/N/Av/6','Taxal/N/C2/2','Humber/N/C2/6',
 'Bedford/N/Bu/2','Merton/N/Bu/6',
 
