--- a/standard-147.html
+++ b/standard-147.html
@@ -67,7 +67,7 @@ var methodTable=
 'Burslem/C/Bw/2','Waltham/C/Bw/6','Burnaby/C/Bu/2',
 
 'Fountains/A/Cj/2','Melrose/A/Cj/6','Tewkesbury/A/Ms/2','Evesham/A/Ms/6',
-'Gastonbury/A/Bw/2','Tintern/A/Bu/2','Sherbourne/A/Bu/6',
+'Glastonbury/A/Bw/2','Tintern/A/Bu/2','Sherbourne/A/Bu/6',
 
 'Combermere/L/D1/2','Vale Royal/L/D2/2','Crowland/L/D3/2','St Werburgh/L/D4/2',
 'Abbeyville/L/Av/2','Canterbury D/L/C2/2','Southwark/L/Bu/2',
@@ -95,8 +95,8 @@ var methodTable=
 
 var initialweight=25;	// initial score (in seconds) assigned to each method
 var penalty=20;		// penalty (in seconds) for each error
-var inertia=.35;		// relative weighting given to previous vs new score
-var progressstretch=2;  // power applied to percentage to emphasise initial progress
+var inertia=.25;		// relative weighting given to previous vs new score
+var progressstretch=1.5;  // power applied to percentage to emphasise initial progress
 
 // ----------------------------------------------------------------
 </script>
