--- a/warboys147.html
+++ b/warboys147.html
@@ -13,13 +13,18 @@
 
 // List of works, arranged by column, each given as Id/Name 
 
-    var workTable =
-        [['C/CAMBRIDGE', 'A/CARLISLE', 'L/LONDON', 'N/NORWICH'],
-        ['D1/D1', 'D2/D2', 'D3/D3', 'D4/D4',
-            'Ck/Chadkirk', 'Ms/Morning Star', 'Cv/Cheviot',
-            'Bw/Berwyn', 'Cn/Chiltern', 'By/Burnaby'],
-        ['2/2nds', '6/6ths']
-        ];
+var workTable=
+[['H/&nbsp;HI&nbsp;','K/KT','O/OX','D/DO','C/CM','N/NO','L/LO','A/CL'],
+
+['Bw/Berwn','Mp/Mendp','D1/D1','D2/D2','D3/D3','D4/D4',
+'S1/S1','S2/S2','S3/S3','S4/S4','Ke/Kelso','Cc/Chels','Bv/Bevly','Su/Surfl','Cm/Cambr'],
+['C2/Chilt','Bu/Burnb','Cj/Chadk','Km/Killm','Sn/Snwdn','_/&nbsp;' ,
+'Ws/Westm','Bo/Bourn','Ad/Allen','_/&nbsp;','Bn/Buckn','Lo/Lond','_/&nbsp;','Wk/Warkw','Cu/Cunec'],
+['_/&nbsp;','C1/Cotsw','Kt/Kent','Ms/Mrn St','_/&nbsp;','Av/Abbvl',
+'Ey/Ely','No/Nwch','_/&nbsp;','Cx/Castn','_/&nbsp;','_/&nbsp;','We/Wells','_/&nbsp;','Ip/Ipsw'],
+
+['2/&nbsp;2&nbsp;','6/6']
+];
 
 // false: gray-out works not included in any method
 
@@ -29,30 +34,71 @@ var includeAll=false;
 
 var methodTable=
 [
-'Elston/C/Ck/2','Clarence/C/Ck/6','Kirkstall/C/Ms/2','London Vic/C/Ms/6',
-'Burslem/C/Bw/2','Waltham/C/Bw/6','Burnaby/C/By/2',
+'Cambridge S/C/Cm/2','Primrose/C/Cm/6','Ipswich/C/Ip/2','Norfolk/C/Ip/6',
+'Beverley/C/Bv/2','Berwick/C/Bv/6','Surfleet/C/Su/2','Hexham/C/Su/6',
+'Bourne/C/Bo/2','Hull/C/Bo/6','York/C/Lo/2','Durham/C/We/2',
 
-'Fountains/A/Ck/2','Melrose/A/Ck/6','Tewkesbury/A/Ms/2','Evesham/A/Ms/6',
-'Glastonbury/A/Bw/2','Tintern/A/By/2','Sherborne/A/By/6',
+'Carlisle/A/Cm/2','Northumberland/A/Ip/2','Whitley/A/Ip/6',
+'Chester/A/Bv/2','Munden/A/Su/2','Sandiacre/A/Bo/2','Wooler/A/Bo/6',
+'Alnwick/A/Lo/2','Canterbury S/A/Lo/6','Newcastle/A/We/2','Morpeth/A/We/6',
+
+'London/L/Lo/2','Wells/L/We/2','Lincoln/L/Ws/2','Coldstream/L/Ad/2',
+'Cunecastre/L/Cu/2','Kelso/L/Ke/2',
+
+'Norwich/N/No/6','Warkworth/N/Wk/6','Westminster/N/Ws/2','Allendale/N/Ad/2',
+'Netherseale/N/Cu/2',"Annable's London/N/Cu/6",'Bamborough/N/Ke/2','Bacup/N/Ke/6',
+'Lightfoot/N/Lo/2','Rossendale/N/Lo/6','Wearmouth/N/We/2','Stamford/N/We/6',
+
+
+'Peveril/H/S1/2','Leasowe/H/S2/2','Melandra/H/S3/2','Beeston/H/S4/2',
+'Bucknall/H/Bn/2','Castleton/H/Cx/2','Stirling/H/Cu/2','Chelsea/H/Cc/2',
+
+'Warwick/K/Cx/2','Ludlow/K/Cx/6','Caernarvon/K/Bn/2','Conway/K/Bn/6',
+'Barham/K/Cm/2','Oswald/K/Cm/6','Pembroke/K/Bv/2','Edinburgh/K/Bv/6',
+'Berkeley/K/Su/2','Kentish/K/Su/6','Pontefract/K/Ws/2','Wath/K/Ws/6',
+'Donottar/K/Ad/2','Carisbrooke/K/Ad/6',
+
+'Wilmslow/D/S1/2','Balmoral/D/S1/6','Bogedone/D/S2/2','Fotheringay/D/S2/6',
+'Rostherne/D/S3/2','Chepstow/D/S3/6','Knutsford/D/S4/2','Skipton/D/S4/6',
+'Ely/D/Ey/2','Belvoir/D/Wk/6','Francis Genius/D/Ip/2','Cambridge D/D/Ip/6',
+'Dover/D/No/6','Dunedin/D/Cc/2','Pevensey/D/Cc/6',
+
+'Disley/O/Bo/2','Conisborough/O/Ke/2','Richborough/O/Ke/6',
+'Evening Star/O/Ey/2','Coventry/O/Ey/6',
+
+
+'Elston/C/Cj/2','Clarence/C/Cj/6','Kirkstall/C/Ms/2','London Vic/C/Ms/6',
+'Burslem/C/Bw/2','Waltham/C/Bw/6','Burnaby/C/Bu/2',
+
+'Fountains/A/Cj/2','Melrose/A/Cj/6','Tewkesbury/A/Ms/2','Evesham/A/Ms/6',
+'Glastonbury/A/Bw/2','Tintern/A/Bu/2','Sherbourne/A/Bu/6',
 
 'Combermere/L/D1/2','Vale Royal/L/D2/2','Crowland/L/D3/2','St Werburgh/L/D4/2',
-'Abbeyville/L/Cv/2','Canterbury D/L/Cn/2','Southwark/L/By/2',
+'Abbeyville/L/Av/2','Canterbury D/L/C2/2','Southwark/L/Bu/2',
 
 'Old Oxford/N/D1/2','Neasden/N/D1/6','College Bob IV/N/D2/2','St Albans/N/D2/6',
 'Newdigate/N/D3/2','Charlwood/N/D3/6','Willesden/N/D4/2','Wragby/N/D4/6',
-'Marple/N/Cv/2','Braintree/N/Cv/6','Taxal/N/Cn/2','Humber/N/Cn/6',
-'Bedford/N/By/2','Merton/N/By/6'
+'Marple/N/Av/2','Braintree/N/Av/6','Taxal/N/C2/2','Humber/N/C2/6',
+'Bedford/N/Bu/2','Merton/N/Bu/6',
 
-    ];
+
+'Kent/K/Kt/6','Trinity Sunday/K/Km/2','Killamarsh/K/Km/6',
+'Quantock/K/Sn/2','Snowdon/K/Sn/6','Berwyn/K/Bw/2','Waterford/K/Bw/6',
+
+'Oxford/O/Kt/6','Duke of Norfolk/O/D1/2','Sandal/O/D1/6','Morning Star/O/Ms/2',
+'College Ex/O/D2/2',"London Sc Pl/O/D2/6",'Ockley/O/D3/2','Capel/O/D3/6',
+'Norbury/O/D4/2','Kingston/O/D4/6','Rochester/O/C1/2','Burton/O/C1/6',
+
+'Pennine/H/Km/2','Norton-le-M/H/Sn/2','Cheviot/H/Av/2',
+'Chiltern/H/C2/2','Mendip/H/Mp/2','Cotswold/H/C1/2',
+
+'Chadkirk/D/Cj/2','Nelson/D/Cj/6','British Sc Pl/D/Mp/2',"Woodcock's Vic/D/Mp/6"
+];
+
 
     var composition =
-        ['Kirkstall','Burslem','Elston','Burnaby','London Vic','Waltham','Burslem','Clarence','Burslem',
-            'Marple', 'Old Oxford', 'College Bob IV', 'Newdigate', 'Willesden', 'Bedford', 'Humber', 'Wragby',
-            'Burslem', 'Tewkesbury', 'Melrose', 'Fountains', 'Glastonbury', 'Evesham', 'Sherborne', 'Fountains',
-            'Combermere', 'Vale Royal', 'Tintern', 'Fountains',
-            'Abbeyville', 'Crowland', 'Southwark', 'Canterbury D', 'St Werburgh', 'St Werburgh',
-        'Neasden','Braintree','St Albans','Marple','Charlwood','Merton','Taxal'];
-
+        ["Woodcock's Vic", 'Primrose', 'Balmoral', 'Burton', 'Cambridge D', 'Rochester', 'Burton', 'Francis Genius', 'Rochester', 'Melrose', 'Clarence', 'Norfolk', 'York', 'Alnwick', 'Mendip', 'Peveril', 'Chelsea', 'Mendip', 'Lincoln', 'Combermere', 'Berkeley', 'Waterford', 'Oswald', 'Barham', 'Sherborne', 'Killamarsh', 'Ludlow', 'Conway', 'Ludlow', 'Southwark', 'Old Oxford', 'College Bob IV', 'London', 'Conisborough', 'Duke of Norfolk', 'College Ex', 'Ockley', 'Bourne', 'Wooler', 'Melrose', 'Fountains', 'Munden', 'Canterbury S', 'Alnwick', 'Westminster', 'Bedford', 'Allendale', 'Morning Star', 'Alnwick', 'Newcastle', 'Waltham', 'Hexham', 'Burslem', 'York', 'Kelso', 'Chester', 'Kirkstall', 'Marple', 'Morning Star', 'Kirkstall', 'Norbury', 'Wilmslow', 'Duke of Norfolk', 'Burton', 'Pevensey', 'Warkworth', "Annable's London", 'Pevensey', 'Sandal', 'Belvoir', 'Bogedone', 'Burnaby', 'Fotheringay', 'Rochester', 'Ely', 'Durham', 'York', 'Kent', 'Morpeth', 'Snowden', 'Morpeth', 'Tintern', 'Whitley', 'Northumberland', 'Tintern', 'Pennine', 'Mendip', 'Cotswold', 'Mendip', 'Oxford', 'London Sc Pl', 'Capel', 'Kingston', 'Richborough', 'Sandal', 'Cambridge D', 'Braintree', 'Norwich', 'Humber', 'Nelson', 'Oxford', 'Surfleet', 'Hull', 'Oxford', 'Durham', 'Lighfoot', 'Wearmouth', 'Lighfoot', 'Evening Star', 'Lightfoot', 'Bourne', 'Ipswich', 'Cambridge S', 'Francis Genius', 'Ipswich', 'Clarence', 'Primrose', 'Burton', 'Chepstow', 'Bamborough', 'Rostherne', 'Durham', 'Coldstream', 'Abbeyville', 'Lincoln', 'Bacup', 'Neasden', 'St Albans', 'Charlwood', 'Burton', 'Coventry', 'Stamford', 'Rossendale', 'Merton', 'Rossendale', 'Taxal', 'Nelson', 'Chadkirk', 'Disley', 'Chadkirk', 'Leasowe', 'Chelsea', 'Melandra', 'Beeston', 'Peveril', 'Chiltern', 'Stirling', 'Cheviot', 'Chiltern', 'Munden', 'Carlisle', 'Chester', 'Glastonbury', 'Munden', 'London Vic', 'Norwich', 'Burton', 'Elston', 'Rochester', 'Burton', 'Rochester', 'Abbeyville', 'Castleton', 'Bucknall', 'Pennine', 'Trinity Sunday', 'Warwick', 'Quantock', 'Caernarvon', 'Beverley', 'York', 'Berwick', 'Oxford', 'Newdigate', 'Willesden', 'Wragby', 'London', 'Berwyn', 'Edinburgh', 'Kentish', 'Pembroke', 'Berkeley', 'Wells', 'Abbeyville', 'Kelso', 'Wells', 'Norton-le-M', 'Bucknall', 'Belvoir', 'Dover', 'Belvoir', 'Netherseale', 'Knutsford', 'Dunedin', 'British Sc Pl', 'Bourne', 'Skipton', 'Rochester', 'Wath', 'Pontefract', 'Donottar', 'Carisbrooke', 'Wath', 'Evesham', 'Tewkesbury', 'Sandiacre', 'Evesham', 'Combermere', 'Vale Royal', 'Crowland', 'St Werburgh', 'Combermere', 'Canterbury D', 'Abbeyville', 'Cunecastre'];
+    
 // Parameters
 
 var initialweight=25;	// initial score (in seconds) assigned to each method
