--- a/warboys147.html
+++ b/warboys147.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Standard 29 Treble Bob Methods</title>
+<title>Warboys 147</title>
 <!-- <title>Kent-Above Treble Bob Methods</title> -->
 <!-- <title>Carlisle-Above Surprise Methods</title> -->
 <!-- <title>London-Above Surprise Methods</title> -->
