--- a/warboys147.html
+++ b/warboys147.html
@@ -71,7 +71,7 @@ var methodTable=
 'Burslem/C/Bw/2','Waltham/C/Bw/6','Burnaby/C/Bu/2',
 
 'Fountains/A/Cj/2','Melrose/A/Cj/6','Tewkesbury/A/Ms/2','Evesham/A/Ms/6',
-'Glastonbury/A/Bw/2','Tintern/A/Bu/2','Sherbourne/A/Bu/6',
+'Glastonbury/A/Bw/2','Tintern/A/Bu/2','Sherborne/A/Bu/6',
 
 'Combermere/L/D1/2','Vale Royal/L/D2/2','Crowland/L/D3/2','St Werburgh/L/D4/2',
 'Abbeyville/L/Av/2','Canterbury D/L/C2/2','Southwark/L/Bu/2',
