--- a/4ths-delight-n.html
+++ b/4ths-delight-n.html
@@ -17,7 +17,7 @@ var workTable=
 [['C/CAMBRIDGE','A/CARLISLE','L/LONDON','N/NORWICH'],
 ['D1/D1','D2/D2','D3/D3','D4/D4',
 'Ck/Elston','Ms/Kirkstall','Cv/Marple',
-'Bw/Burslem','Cn/Taxal','By/Bedform'],
+'Bw/Burslem','Cn/Taxal','By/Bedford'],
 ['2/2nds','6/6ths']
 ];
 
