--- a/4ths-delight-n.html
+++ b/4ths-delight-n.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Standard 29 Treble Bob Methods</title>
-<!-- <title>Kent-Above Treble Bob Methods</title> -->
-<!-- <title>Carlisle-Above Surprise Methods</title> -->
-<!-- <title>London-Above Surprise Methods</title> -->
-<!-- <title>Norwich-Above Surprise Methods</title> -->
+<title>Standard 35 4ths Place Delight Methods</title>
 
 <script>
 // ------------------------------------------------------------
