--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
     <h3>Treble Dodging</h3>
     
     <p><a href='standard-147.html'>Standard 147</a></p>
+
+    <h3>EXTRA</h3>
+    <p><a href='70m-buscr.html'>70m for BUSCR peal</a></p>
     
     <p>Alexander E Holroyd, 2020-2022</p>
 </body>
