--- a/70m-buscr.html
+++ b/70m-buscr.html
@@ -40,7 +40,7 @@ var methodTable=
 
 'Old Oxford/N/D1/2','Neasden/N/D1/6','College Bob IV/N/D2/2','St Albans/N/D2/6',
 'Marple/N/Cv/2','Braintree/N/Cv/6','Taxal/N/Cn/2','Humber/N/Cn/6',
-'Bedford/N/By/2','Merton/N/By/6'
+'Bedford/N/By/2','Merton/N/By/6',
 
 //surprises
 'Cambridge/C/Cm/2','Primrose/C/Cm/6','Ipswich/C/Ip/2','Norfolk/C/Ip/6',
