--- a/70m-buscr.html
+++ b/70m-buscr.html
@@ -32,8 +32,8 @@ var methodTable=
 'Elston/C/Ck/2','Clarence/C/Ck/6','Kirkstall/C/Ms/2','London Vic/C/Ms/6',
 'Burslem/C/Bw/2','Waltham/C/Bw/6','Burnaby/C/By/2',
 
-'Fountains/A/Ck/2','Melrose/A/Ck/6','Tewkesbury/A/Ms/2','Evesham/A/Ms/6',
-'Glastonbury/A/Bw/2','Tintern/A/By/2','Sherborne/A/By/6',
+'Fountains/K/Ck/2','Melrose/K/Ck/6','Tewkesbury/K/Ms/2','Evesham/K/Ms/6',
+'Glastonbury/K/Bw/2','Tintern/K/By/2','Sherborne/K/By/6',
 
 'Combermere/L/D1/2','Vale Royal/L/D2/2',
 'Abbeyville/L/Cv/2','Canterbury D/L/Cn/2','Southwark/L/By/2',
