--- a/70m-buscr.html
+++ b/70m-buscr.html
@@ -13,8 +13,8 @@ var workTable=
 [['C/CAMBRIDGE','K/CARLISLE','L/LONDON','N/NORWICH'],
 ['Cm/Cambridge','Ip/Ipswich','Cu/Cunecastre','Bv/Beverley','Su/Surfleet',
 'No/Norwich','Bo/Bourne','Lo/London','We/Wells',
-'Ws/Westminster','Ad/Allendale','Ke/Kelso','Wk/Warkworth', 
-'D1/D1','D2/D2',
+'Ws/Westminster','Ad/Allendale','Ke/Kelso','Wk/Warkworth'],
+ ['D1/D1','D2/D2',
 'Ck/Elston','Ms/Kirkstall','Cv/Marple',
 'Bw/Burslem','Cn/Taxal','By/Bedford'],
 ['2/2nds','6/6ths']
