--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <h3>EXTRA</h3>
     <p><a href='70m-buscr.html'>70m for BUSCR peal</a></p>
     <p><a href='70m-buscr-columns.html'>70m for BUSCR peal x2 columns</a></p>
+    <p><a href='buscr-70-29.html'>The delights from the 70m comp</a></p>
     
     <p>Alexander E Holroyd, 2020-2022</p>
 </body>
