--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <h3>Treble Dodging</h3>
     
     <p><a href='standard-147.html'>Standard 147</a></p>
+    <p><a href='76-4ths-delight-surprise.html'>41 Surprise + 35 4ths Delight - 76</a></p>
 
     <h3>EXTRA</h3>
     <p><a href='70m-buscr.html'>70m for BUSCR peal</a></p>
