--- a/76-4ths-delight-surprise.html
+++ b/76-4ths-delight-surprise.html
@@ -44,18 +44,21 @@ var methodTable=
 'Bedford/N/By/2','Merton/N/By/6',
 
 //surprises
-'Cambridge/C/Cm/2','Primrose/C/Cm/6','Ipswich/C/Ip/2','Norfolk/C/Ip/6',
-'Beverley/C/Bv/2','Berwick/C/Bv/6','Surfleet/C/Su/2','Hexham/C/Su/6',
-'Bourne/C/Bo/2','Hull/C/Bo/6','York/C/Lo/2','Durham/C/We/2',
+  
+// 'Cambridge/C/Cm/2','Primrose/C/Cm/6','Ipswich/C/Ip/2','Norfolk/C/Ip/6',
+// 'Beverley/C/Bv/2','Berwick/C/Bv/6','Surfleet/C/Su/2','Hexham/C/Su/6',
+// 'Bourne/C/Bo/2','Hull/C/Bo/6','York/C/Lo/2','Durham/C/We/2',
 
-'Carlisle/K/Cm/2','Northumberland/K/Ip/2','Whitley/K/Ip/6',
+//'Carlisle/K/Cm/2',
+'Northumberland/K/Ip/2','Whitley/K/Ip/6',
 'Chester/K/Bv/2','Munden/K/Su/2','Sandiacre/K/Bo/2','Wooler/K/Bo/6',
 'Alnwick/K/Lo/2','Canterbury/K/Lo/6','Newcastle/K/We/2','Morpeth/K/We/6',
 
-'London/L/Lo/2','Wells/L/We/2','Lincoln/L/Ws/2','Coldstream/L/Ad/2',
-'Cunecastre/L/Cu/2','Kelso/L/Ke/2',
+//'London/L/Lo/2','Wells/L/We/2','Cunecastre/L/Cu/2','Kelso/L/Ke/2',
+'Lincoln/L/Ws/2','Coldstream/L/Ad/2',
 
-'Norwich/N/No/6','Warkworth/N/Wk/6','Westminster/N/Ws/2','Allendale/N/Ad/2',
+//'Norwich/N/No/6','Westminster/N/Ws/2','Allendale/N/Ad/2',
+'Warkworth/N/Wk/6',
 'Netherseale/N/Cu/2',"Annable's London/N/Cu/6",'Bamborough/N/Ke/2','Bacup/N/Ke/6',
 'Lightfoot/N/Lo/2','Rossendale/N/Lo/6','Wearmouth/N/We/2','Stamford/N/We/6'
 ];
