--- a/76-4ths-delight-surprise.html
+++ b/76-4ths-delight-surprise.html
@@ -11,9 +11,9 @@
 
 var workTable=
 [['C/CAMBRIDGE','K/CARLISLE','L/LONDON','N/NORWICH'],
-['Cm/Cambridge','Ip/Ipswich','Cu/Cunecastre','Bv/Beverley','Su/Surfleet',
-'No/Norwich','Bo/Bourne','Lo/London','We/Wells',
-'Ws/Westminster','Ad/Allendale','Ke/Kelso','Wk/Warkworth'], 
+['Ad/Allendale','Bv/Beverley','Bo/Bourne','Cm/Cambridge',
+ 'Cu/Cunecastre','Ip/Ipswich','Ke/Kelso','Lo/London','No/Norwich',
+ 'Su/Surfleet','Wk/Warkworth','We/Wells','Ws/Westminster'], 
 ['D1/D1','D2/D2','D3/D3','D4/D4',
 'Ck/Elston','Ms/Kirkstall','Cv/Marple',
 'Bw/Burslem','Cn/Taxal','By/Bedford'],
