--- a/76-4ths-delight-surprise.html
+++ b/76-4ths-delight-surprise.html
@@ -35,7 +35,7 @@ var methodTable=
 'Fountains/K/Ck/2','Melrose/K/Ck/6','Tewkesbury/K/Ms/2','Evesham/K/Ms/6',
 'Glastonbury/K/Bw/2','Tintern/K/By/2','Sherborne/K/By/6',
 
-'Combermere/L/D1/2','Vale Royal/L/D2/2','Crowland/L/D3/2','St Werburgh/D4/2',
+'Combermere/L/D1/2','Vale Royal/L/D2/2','Crowland/L/D3/2','St Werburgh/L/D4/2',
 'Abbeyville/L/Cv/2','Canterbury D/L/Cn/2','Southwark/L/By/2',
 
 'Old Oxford/N/D1/2','Neasden/N/D1/6','College Bob IV/N/D2/2','St Albans/N/D2/6',
