--- a/76-4ths-delight-surprise.html
+++ b/76-4ths-delight-surprise.html
@@ -52,7 +52,7 @@ var methodTable=
 //'Carlisle/K/Cm/2',
 'Northumberland/K/Ip/2','Whitley/K/Ip/6',
 'Chester/K/Bv/2','Munden/K/Su/2','Sandiacre/K/Bo/2','Wooler/K/Bo/6',
-'Alnwick/K/Lo/2','Canterbury/K/Lo/6','Newcastle/K/We/2','Morpeth/K/We/6',
+'Alnwick/K/Lo/2','Canterbury S/K/Lo/6','Newcastle/K/We/2','Morpeth/K/We/6',
 
 //'London/L/Lo/2','Wells/L/We/2','Cunecastre/L/Cu/2','Kelso/L/Ke/2',
 'Lincoln/L/Ws/2','Coldstream/L/Ad/2',
