--- a/76-4ths-delight-surprise.html
+++ b/76-4ths-delight-surprise.html
@@ -29,19 +29,26 @@ var includeAll=false;
 var methodTable=
 [
 //delights
-'Elston/C/Ck/2','Clarence/C/Ck/6','Kirkstall/C/Ms/2','London Vic/C/Ms/6',
-'Burslem/C/Bw/2','Waltham/C/Bw/6','Burnaby/C/By/2',
+//'Elston/C/Ck/2','Clarence/C/Ck/6',
+ 'Kirkstall/C/Ms/2','London Vic/C/Ms/6',
+//'Burslem/C/Bw/2',
+ 'Waltham/C/Bw/6',//'Burnaby/C/By/2',
 
-'Fountains/K/Ck/2','Melrose/K/Ck/6','Tewkesbury/K/Ms/2','Evesham/K/Ms/6',
+'Fountains/K/Ck/2','Melrose/K/Ck/6',//'Tewkesbury/K/Ms/2',
+ 'Evesham/K/Ms/6',
 'Glastonbury/K/Bw/2','Tintern/K/By/2','Sherborne/K/By/6',
 
-'Combermere/L/D1/2','Vale Royal/L/D2/2','Crowland/L/D3/2','St Werburgh/L/D4/2',
-'Abbeyville/L/Cv/2','Canterbury D/L/Cn/2','Southwark/L/By/2',
+//'Combermere/L/D1/2','Vale Royal/L/D2/2','Crowland/L/D3/2','St Werburgh/L/D4/2',
+'Abbeyville/L/Cv/2',//'Canterbury D/L/Cn/2',
+ 'Southwark/L/By/2',
 
-'Old Oxford/N/D1/2','Neasden/N/D1/6','College Bob IV/N/D2/2','St Albans/N/D2/6',
-'Newdigate/N/D3/2','Charlwood/N/D3/6','Willesden/N/D4/2','Wrabgy/N/D4/6',
-'Marple/N/Cv/2','Braintree/N/Cv/6','Taxal/N/Cn/2','Humber/N/Cn/6',
-'Bedford/N/By/2','Merton/N/By/6',
+'Old Oxford/N/D1/2',//'Neasden/N/D1/6',
+ 'College Bob IV/N/D2/2',//'St Albans/N/D2/6',
+'Newdigate/N/D3/2',//'Charlwood/N/D3/6',
+ 'Willesden/N/D4/2',//'Wrabgy/N/D4/6',
+'Marple/N/Cv/2',//'Braintree/N/Cv/6',
+ 'Taxal/N/Cn/2',//'Humber/N/Cn/6',
+'Bedford/N/By/2',//'Merton/N/By/6',
 
 //surprises
   
@@ -50,17 +57,21 @@ var methodTable=
 // 'Bourne/C/Bo/2','Hull/C/Bo/6','York/C/Lo/2','Durham/C/We/2',
 
 //'Carlisle/K/Cm/2',
-'Northumberland/K/Ip/2','Whitley/K/Ip/6',
-'Chester/K/Bv/2','Munden/K/Su/2','Sandiacre/K/Bo/2','Wooler/K/Bo/6',
-'Alnwick/K/Lo/2','Canterbury S/K/Lo/6','Newcastle/K/We/2','Morpeth/K/We/6',
+'Northumberland/K/Ip/2',//'Whitley/K/Ip/6',
+'Chester/K/Bv/2','Munden/K/Su/2','Sandiacre/K/Bo/2',//'Wooler/K/Bo/6',
+'Alnwick/K/Lo/2',//'Canterbury S/K/Lo/6',
+ 'Newcastle/K/We/2','Morpeth/K/We/6',
 
 //'London/L/Lo/2','Wells/L/We/2','Cunecastre/L/Cu/2','Kelso/L/Ke/2',
 'Lincoln/L/Ws/2','Coldstream/L/Ad/2',
 
 //'Norwich/N/No/6','Westminster/N/Ws/2','Allendale/N/Ad/2',
 'Warkworth/N/Wk/6',
-'Netherseale/N/Cu/2',"Annable's London/N/Cu/6",'Bamborough/N/Ke/2','Bacup/N/Ke/6',
-'Lightfoot/N/Lo/2','Rossendale/N/Lo/6','Wearmouth/N/We/2','Stamford/N/We/6'
+'Netherseale/N/Cu/2',"Annable's London/N/Cu/6",//'Bamborough/N/Ke/2',
+ 'Bacup/N/Ke/6',
+//'Lightfoot/N/Lo/2',
+ 'Rossendale/N/Lo/6',//'Wearmouth/N/We/2',
+ 'Stamford/N/We/6'
 ];
 
 // Parameters
