--- a/treble-bob-dover.html
+++ b/treble-bob-dover.html
@@ -11,9 +11,9 @@
 var workTable=
 [['O/OXFORD','K/KENT','H/HILLS','D/DOVER'],
 ['D1/D1','D2/D2','D3/D3','D4/D4',
-'Ck/Chadkirk','Ki/Killamarsh','Sn/Snowdon',
-'Ke/Kent','Ms/Morning Star','Cv/Cheviot',
-'Bw/Berwyn','Ci/Chiltern','Mp/Mendip','Cw/Cotswold'],
+'Ck/Elston','Ki/Killamarsh','Sn/Snowdon',
+'Ke/Kent','Ms/Morning Star','Cv/Marple',
+'Bw/Burslem','Ci/Taxal','Mp/Mendip','Cw/Cotswold'],
 ['2/2nds','6/6ths']
 ];
 
