--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<h1>A complete rip off of [Alexander Holroyd's website](https://alexanderholroyd.github.io/methods/), using the under/overwork names that I use.</h1>
 <title>Method Tester</title>
 
 <style>
