--- a/treble-bob-29.html
+++ b/treble-bob-29.html
@@ -18,7 +18,7 @@ var workTable=
 ['D1/D1','D2/D2','D3/D3','D4/D4',
 'Ck/Elston','Ki/Killamarsh','Sn/Snowdon',
 'Ke/Kent','Ms/Morning Star','Cv/Marple',
-'Bw/Burslem','Ci/Taxal','Mp/Mendip','Cw/Cotswold'],
+'Bw/Burslem','Ci/Taxal','Cw/Cotswold','Mp/Mendip'],
 ['2/2nds','6/6ths']
 ];
 
