--- a/treble-bob-29.html
+++ b/treble-bob-29.html
@@ -2,10 +2,6 @@
 <html>
 <head>
 <title>Standard 29 Treble Bob Methods</title>
-<!-- <title>Kent-Above Treble Bob Methods</title> -->
-<!-- <title>Carlisle-Above Surprise Methods</title> -->
-<!-- <title>London-Above Surprise Methods</title> -->
-<!-- <title>Norwich-Above Surprise Methods</title> -->
 
 <script>
 // ------------------------------------------------------------
@@ -14,7 +10,7 @@
 // List of works, arranged by column, each given as Id/Name 
 
 var workTable=
-[['O/OXFORD','K/KENT','H/HILLS','D/DOVER'],
+[['H/HILLS','D/DOVER','O/OXFORD','K/KENT',],
 ['D1/D1','D2/D2','D3/D3','D4/D4',
 'Ck/Elston','Ki/Killamarsh','Sn/Snowdon',
 'Ke/Kent','Ms/Morning Star','Cv/Marple',
