--- a/4ths-delight-london.html
+++ b/4ths-delight-london.html
@@ -16,8 +16,8 @@
 var workTable=
 [['C/CAMBRIDGE','A/CARLISLE','L/LONDON','N/NORWICH'],
 ['D1/D1','D2/D2','D3/D3','D4/D4',
-'Ck/D1 3rd','Ms/D2 1st','Cv/D4 1st',
-'Bw/Berwyn','Cn/Berwyn 3rd','By/Mendip 3rd'],
+'Ck/Elston','Ms/Kirkstall','Cv/Marple',
+'Bw/Burslem','Cn/Taxal','By/Bedford'],
 ['2/2nds','6/6ths']
 ];
 
