--- a/3rds-delight.html
+++ b/3rds-delight.html
@@ -10,7 +10,7 @@
 // List of works, arranged by column, each given as Id/Name 
 
 var workTable=
-[['O/OXFORD','D/DOVER','K/KENT','H/HILLS'],
+[['H/HILLS', 'D/DOVER', 'O/OXFORD', 'K/KENT'],
 ['Cm/Cambridge','Ip/Ipswich','Cu/Cunecastre','Bv/Beverley','Su/Surfleet',
 'No/Norwich','Bo/Bourne',
 'Ws/Westminster','Ad/Allendale','Ke/Kelso','Wk/Warkworth'],
