Refactor workTable and methodTable data
Updated workTable and methodTable with new entries and corrected names.

--- a/standard-147.html
+++ b/standard-147.html
@@ -12,12 +12,12 @@
 var workTable=
 [['H/&nbsp;HI&nbsp;','K/KT','O/OX','D/DO','C/CM','N/NO','L/LO','A/CL'],
 
-['Bw/Berwn','Mp/Mendp','D1/D1','D2/D2','D3/D3','D4/D4',
+['Bw/Bursl','Mp/Mendp','D1/D1','D2/D2','D3/D3','D4/D4',
 'S1/S1','S2/S2','S3/S3','S4/S4','Ke/Kelso','Cc/Chels','Bv/Bevly','Su/Surfl','Cm/Cambr'],
-['C2/Chilt','Bu/Burnb','Cj/Chadk','Km/Killm','Sn/Snwdn','_/&nbsp;' ,
+['C2/Taxal','Bu/Bedf','Cj/Chadk','Km/Killm','Sn/Snwdn','_/&nbsp;' ,
 'Ws/Westm','Bo/Bourn','Ad/Allen','_/&nbsp;','Bn/Buckn','Lo/Lond','_/&nbsp;','Wk/Warkw','Cu/Cunec'],
-['_/&nbsp;','C1/Cotsw','Kt/Kent','Ms/Mrn St','_/&nbsp;','Av/Abbvl',
-'Ey/Ely','No/Nwch','_/&nbsp;','Cx/Castn','_/&nbsp;','_/&nbsp;','We/Wells','_/&nbsp;','Ip/Ipsw'],
+['_/&nbsp;','C1/Cotsw','Kt/Kent','Ms/Kirks','_/&nbsp;','Av/Marpl',
+'Ey/Ely','No/Norw','_/&nbsp;','Cx/Castn','_/&nbsp;','_/&nbsp;','We/Wells','_/&nbsp;','Ip/Ipsw'],
 
 ['2/&nbsp;2&nbsp;','6/6']
 ];
@@ -30,18 +30,20 @@ var includeAll=false;
 
 var methodTable=
 [
-'Cambridge S/C/Cm/2','Primrose/C/Cm/6','Ipswich/C/Ip/2','Norfolk/C/Ip/6',
-'Beverley/C/Bv/2','Berwick/C/Bv/6','Surfleet/C/Su/2','Hexham/C/Su/6',
-'Bourne/C/Bo/2','Hull/C/Bo/6','York/C/Lo/2','Durham/C/We/2',
+//'Cambridge S/C/Cm/2','Primrose/C/Cm/6','Ipswich/C/Ip/2','Norfolk/C/Ip/6',
+//'Beverley/C/Bv/2','Berwick/C/Bv/6','Surfleet/C/Su/2','Hexham/C/Su/6',
+//'Bourne/C/Bo/2','Hull/C/Bo/6','York/C/Lo/2','Durham/C/We/2',
 
-'Carlisle/A/Cm/2','Northumberland/A/Ip/2','Whitley/A/Ip/6',
+//'Carlisle/A/Cm/2',
+'Northumberland/A/Ip/2','Whitley/A/Ip/6',
 'Chester/A/Bv/2','Munden/A/Su/2','Sandiacre/A/Bo/2','Wooler/A/Bo/6',
 'Alnwick/A/Lo/2','Canterbury S/A/Lo/6','Newcastle/A/We/2','Morpeth/A/We/6',
 
-'London/L/Lo/2','Wells/L/We/2','Lincoln/L/Ws/2','Coldstream/L/Ad/2',
-'Cunecastre/L/Cu/2','Kelso/L/Ke/2',
+//'London/L/Lo/2','Wells/L/We/2','Lincoln/L/Ws/2','Coldstream/L/Ad/2',
+//'Cunecastre/L/Cu/2','Kelso/L/Ke/2',
 
-'Norwich/N/No/6','Warkworth/N/Wk/6','Westminster/N/Ws/2','Allendale/N/Ad/2',
+//'Norwich/N/No/6',
+'Warkworth/N/Wk/6','Westminster/N/Ws/2','Allendale/N/Ad/2',
 'Netherseale/N/Cu/2',"Annable's London/N/Cu/6",'Bamborough/N/Ke/2','Bacup/N/Ke/6',
 'Lightfoot/N/Lo/2','Rossendale/N/Lo/6','Wearmouth/N/We/2','Stamford/N/We/6',
 
@@ -78,10 +80,12 @@ var methodTable=
 'Bedford/N/Bu/2','Merton/N/Bu/6',
 
 
-'Kent/K/Kt/6','Trinity Sunday/K/Km/2','Killamarsh/K/Km/6',
+//'Kent/K/Kt/6',
+'Trinity Sunday/K/Km/2','Killamarsh/K/Km/6',
 'Quantock/K/Sn/2','Snowdon/K/Sn/6','Berwyn/K/Bw/2','Waterford/K/Bw/6',
 
-'Oxford/O/Kt/6','Duke of Norfolk/O/D1/2','Sandal/O/D1/6','Morning Star/O/Ms/2',
+//'Oxford/O/Kt/6',
+'Duke of Norfolk/O/D1/2','Sandal/O/D1/6','Morning Star/O/Ms/2',
 'College Ex/O/D2/2',"London Sc Pl/O/D2/6",'Ockley/O/D3/2','Capel/O/D3/6',
 'Norbury/O/D4/2','Kingston/O/D4/6','Rochester/O/C1/2','Burton/O/C1/6',
 
@@ -139,3 +143,4 @@ var progressstretch=1.5;  // power applied to percentage to emphasise initial pr
 
 </body>
 </html>
+
