--- a/standard-147.html
+++ b/standard-147.html
@@ -12,12 +12,10 @@
 var workTable=
 [['H/&nbsp;HI&nbsp;','K/KT','O/OX','D/DO','C/CM','N/NO','L/LO','A/CL'],
 
-['Bw/Bursl','Mp/Mendp','D1/D1','D2/D2','D3/D3','D4/D4',
-'S1/S1','S2/S2','S3/S3','S4/S4','Ke/Kelso','Cc/Chels','Bv/Bevly','Su/Surfl','Cm/Cambr'],
-['C2/Taxal','Bu/Bedf','Cj/Chadk','Km/Killm','Sn/Snwdn','_/&nbsp;' ,
-'Ws/Westm','Bo/Bourn','Ad/Allen','_/&nbsp;','Bn/Buckn','Lo/Lond','_/&nbsp;','Wk/Warkw','Cu/Cunec'],
-['_/&nbsp;','C1/Cotsw','Kt/Kent','Ms/Kirks','_/&nbsp;','Av/Marpl',
-'Ey/Ely','No/Norw','_/&nbsp;','Cx/Castn','_/&nbsp;','_/&nbsp;','We/Wells','_/&nbsp;','Ip/Ipsw'],
+['Cj/Eslton', 'D1/D1','D2/D2','D3/D3','D4/D4','C1/Cotsw','Mp/Mendp','Bw/Bursl','C2/Taxal','Bu/Bedf','Km/Killm','Sn/Snwdn']
+['S1/S1','S2/S2','S3/S3','S4/S4','Lo/Lond','Ws/Westm','Ad/Allen','Wk/Warkw','Cu/Cunec','We/Wells','Ke/Kelso','Bn/Buckn','Cc/Chels'],
+['_/&nbsp;','Kt/Kent','Ms/Kirks','_/&nbsp;','Av/Marpl', 'Ey/Ely','No/Norw','_/&nbsp;','Cx/Castn','_/&nbsp;','Cm/Cambr','Ip/Ipsw','Bo/Bourn','Bv/Bevly','Su/Surfl'],
+
 
 ['2/&nbsp;2&nbsp;','6/6']
 ];
@@ -143,4 +141,5 @@ var progressstretch=1.5;  // power applied to percentage to emphasise initial pr
 
 </body>
 </html>
+
 
