--- a/standard-147.html
+++ b/standard-147.html
@@ -12,10 +12,10 @@
 var workTable=
 [['H/&nbsp;HI&nbsp;','K/KT','O/OX','D/DO','C/CM','N/NO','L/LO','A/CL'],
 
-['Cj/Eslton', 'D1/D1','D2/D2','D3/D3','D4/D4','C1/Cotsw','Mp/Mendp','Bw/Bursl','C2/Taxal','Bu/Bedf','Km/Killm','Sn/Snwdn'],
-['S1/S1','S2/S2','S3/S3','S4/S4','Lo/Lond','Ws/Westm','Ad/Allen','Wk/Warkw','Cu/Cunec','We/Wells','Ke/Kelso','Bn/Buckn','Cc/Chels'],
-['_/&nbsp;','Kt/Kent','Ms/Kirks','_/&nbsp;','Av/Marpl', 'Ey/Ely','No/Norw','_/&nbsp;','Cx/Castn','_/&nbsp;','Cm/Cambr','Ip/Ipsw','Bo/Bourn','Bv/Bevly','Su/Surfl'],
-
+['Cj/Eslton','Ms/Kirks','D1/D1','D2/D2','D3/D3','D4/D4','C1/Cotsw','Mp/Mendp','Bw/Bursl','C2/Taxal','Av/Marpl','Bu/Bedf','Km/Killm','Sn/Snwdn'],
+['S1/S1','S2/S2','S3/S3','S4/S4','_/&nbsp;','Cx/Castn','_/&nbsp;','No/Norw','Ey/Ely','Ws/Westm','Ad/Allen','Wk/Warkw','Cu/Cunec',],
+['Lo/Lond','We/Wells','Ke/Kelso','Bn/Buckn','Cc/Chels''_/&nbsp;','_/&nbsp;','Cm/Cambr','Ip/Ipsw','Bo/Bourn','Bv/Bevly','Su/Surfl'],
+// ,'Kt/Kent',
 
 ['2/&nbsp;2&nbsp;','6/6']
 ];
@@ -141,6 +141,7 @@ var progressstretch=1.5;  // power applied to percentage to emphasise initial pr
 
 </body>
 </html>
+
 
 
 
