--- a/standard-147.html
+++ b/standard-147.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Standard 42 3rds Place Delight Methods</title>
+<title>147 LW names</title>
 
 <script>
 // ------------------------------------------------------------
@@ -141,6 +141,7 @@ var progressstretch=1.5;  // power applied to percentage to emphasise initial pr
 
 </body>
 </html>
+
 
 
 
